[tool.poetry]
name = "skyline-profiler"
version = "0.12.0"
description = "Interactive performance profiling and debugging tool for PyTorch neural networks."
authors = ["Geoffrey Yu <gxyu@cs.toronto.edu>"]
maintainers = ["Akbar Nurlybayev <akbar@centml.ai>", "Yubo Gao <ybgao@centml.ai>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/CentML/skyline"
keywords = ["pytorch", "neural networks", "debugger", "profiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Debuggers",
]
packages = [
    { include = "skyline" },
]

include = [ "pyproject.toml" ]

[tool.poetry.scripts]
skyline = "skyline.skyline:main"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "*"
protobuf = "3.18.3"
numpy = "^1.22"
torch = "*"
nvidia-ml-py3 = "*"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
