[tool.poetry]
name = "deepview-profile"
version = "0.14.4"
description = "Interactive performance profiling and debugging tool for PyTorch neural networks."
authors = ["CentML <support@centml.ai>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/CentML/DeepView.Profile"
keywords = ["pytorch", "neural networks", "debugger", "profiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Debuggers",
]
packages = [
    { include = "deepview_profile" },
]

include = [ "pyproject.toml" ]

[tool.poetry.scripts]
deepview = "deepview_profile:main"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "*"
protobuf = "3.19.6"
numpy = "^1.15.2"
torch = ">=2.1.0"
nvidia-ml-py3 = "*"
toml = "^0.10.2"
pyRAPL = "^0.2.3"
deepview-predict = "*"
perfetto = "*"
orjson = "*"
torch-tb-profiler = "*"
pymongo = "*"
scipy = "*"
termcolor = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
pre-commit = "2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["examples", "deepview_profile/protocol_gen/"]
